# IEEE_OPEN_Tutorials

./: Coisas_a_fazer.md  Install Realsense SDK e lib realsense-ros UBUNTU.md  Intall Realsense SDK e lib realsense-ros.md  README.md
src/neo_local_planner/include/: NeoLocalPlanner.h
src/neo_local_planner/src/: NeoLocalPlanner.cpp
src/open_navigation/: CMakeLists.txt  package.xml
src/open_navigation/src/: motor_drive.py
src/opencv_open/: CMakeLists.txt  package.xml
src/opencv_open/cfg/: Colors.cfg
src/opencv_open/launch/: all_detectors.launch  launch.launch
src/opencv_open/msg/: Detection.msg  DetectionArray.msg
src/opencv_open/src/: Camera_params_pub.cpp  aruco.cpp  aruquinho_dos_cria.cpp  color_calib.cpp  colored_cu.py  cubo_organizer.py  tentativa.cpp  webcam_pub.cpp  webcam_sub.cpp
src/opencv_open/srv/: DetectionsOrganized.srv
src/rtabmap_ieee/: CMakeLists.txt  package.xml
src/rtabmap_ieee/launch/: rtabmap_ieee.launch  rtabmap_ieeeLOC.launch
src/rtabmap_ieee/rviz/: rtabmap_ieee.rviz
src/strategy/: CMakeLists.txt  package.xml
src/strategy/launch/: Riding.launch  simulated.launch  strategy.launch
src/strategy/src/: map_limits.py  (+3 more)
src/urdf_package/: CMakeLists.txt  package.xml
src/urdf_package/config/: config.yaml
src/urdf_package/launch/: cubes.launch  display.launch  gazebo.launch  real_apllication.launch  spawn_robot.launch
src/urdf_package/meshes/: Av2.stl  Bv2.stl  Cv2.stl  Dv2.stl  Ev2.stl  Fv2.stl  Gv2.stl  Hv2.stl  Iv2.stl  aruko  9 v2.stl  aruko 1 v2.stl  aruko 2 v2.stl  aruko 3 v3.stl  aruko 4 v1.stl  aruko 5 v2.stl  aruko 6 v2.stl  aruko 7 v1.stl  aruko 8 v2.stl  cubos coloridos v1b.stl  cubos coloridos v1r.stl  cubos coloridos v2.stl  cubos coloridos v2g.stl
src/urdf_package/models/: Cubo_1.dae  Cubo_13.dae  Cubo_14.dae  Cubo_15.dae  Cubo_16.dae  Cubo_17.dae  Cubo_18.dae  Cubo_19.dae  Cubo_2.dae  Cubo_20.dae  Cubo_21.dae  Cubo_22.dae  Cubo_23.dae  Cubo_28.dae  Cubo_29.dae  Cubo_3.dae  Cubo_4.dae  Cubo_5.dae  Cubo_6.dae  Cubo_7.dae  Cubo_8.dae  Cubo_9.dae  arena.dae  arenaieee.dae  arenaieee_collision.dae
src/urdf_package/rviz/: simulador.rviz  urdf.rviz
src/urdf_package/scripts/: random_cubes.py  random_origins.py
src/urdf_package/urdf/: depthcam.xacro  include.xacro  inertia_calc.xacro  openrobot.gazebo.xacro  openrobot.xacro  real_robot.xacro  tracker.xacro
src/urdf_package/worlds/: arena.world  arena_cubes.world  block.world  default.world  empty.world
(+20 files in other folders)
